--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
     </svg>
 
     <!-- Quotes Section -->
-    <div class="wrap services-wrap">
+    <div class="wrap services-wrap recent-wrap">
         <section class="grid grid-pad">
+            <h2>testimonials</h2>
             <div class="col-1-1 service-box cl-client-carousel-container">
                 <div class="content">
                     <div class="cl-client-carousel">
@@ -402,8 +403,9 @@
     </svg>
 
     <!-- Clients Logos Section -->
-    <div class="wrap">
+    <div class="wrap client">
         <div class="grid grid-pad">
+            <h2>Our Clients</h2>
             <div class="col-1-1">
                 <div class="content">
                     <!-- Start of Carousel Container -->
@@ -531,8 +533,17 @@
                 </div>
             </div>
             <div class="col-1-2 pleft-25">
-                <div class="outer">
+                <!-- <div class="outer">
                     <img src="/images/clients/1.png" alt="" srcset="" class="hvimg">
+                </div> -->
+                <div class="content contact-form">
+                    <form class="form">
+                        <input type="text" class="comment-name" placeholder="Name*" required>
+                        <input type="email" class="comment-email" placeholder="Email*" required>
+                        <input type="text" class="comment-subject" placeholder="Subject">
+                        <textarea class="required comment-text" placeholder="Message..." required></textarea>
+                        <input type="submit" value="Send Message" class="btn submit comment-submit">
+                    </form>
                 </div>
             </div>
         </div>
