--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
     </svg>
 
     <!-- Clients Logos Section -->
-    <div class="wrap client">
+    <div class="wrap ">
         <div class="grid grid-pad">
-            <h2>Our Clients</h2>
+            <h2 class="client">Our Clients</h2>
             <div class="col-1-1">
                 <div class="content">
                     <!-- Start of Carousel Container -->
