--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     <!-- Clients Logos Section -->
     <div class="wrap ">
         <div class="grid grid-pad">
-            <h2 class="client">Our Clients</h2>
+            <h2 style="text-align: center;">Our Clients</h2>
             <div class="col-1-1">
                 <div class="content">
                     <!-- Start of Carousel Container -->
