--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Minku Creation is a production company owned by minku">
     <title>Minku Creation</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/reset.css">
@@ -237,12 +239,7 @@
                         </div>
                     </div>
                 </div>
-                
-                
             </div>
-
-            <div class="col-1-1"><a class="btn" href="#0">View More</a></div>
-
         </section>
     </div>
     <!-- End Work Section -->
@@ -580,19 +577,14 @@
 
     <div class="loader-overlay">
         <div class="loader">
-            <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-        </div>
     </div>
 
     <!-- JS -->
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <script src="js/mixitup.js"></script>
-    <script src="js/smoothscroll.js"></script>
+    <!-- <script src="js/smoothscroll.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/jquery.nav.js"></script>
     <script src="js/owl-carousel/owl.carousel.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
