--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Minku Creation is a production company owned by Neeraj sharma">
+    <meta name="description" content="Minku Creation is a production company owned by Neeraj Sharma">
     <title>Minku Creation</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
