--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -67,10 +68,10 @@
     <!-- End Parallax Section -->
 
     <!-- CurveUp -->
-    <svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
-    </svg>
+    </svg> -->
 
     <!-- Services Section -->
     <div class="wrap services-wrap" id="services">
@@ -133,15 +134,15 @@
     <!-- End Services Section -->
 
     <!-- CurveDown -->
-    <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
-    </svg>
+    </svg> -->
 
     <!-- Work Section -->
     <div class="wrap grey recent-wrap" id="work">
         <section class="grid grid-pad">
-            <h2>Our Work</h2>
+            <h2>Gallary</h2>
             <!-- Start of Filter section -->
             <div class="col-1-1 mix">
                 <ul class="filters">
@@ -180,7 +181,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="col-1-3 mix photography">
                     <div class="content">
                         <div class="recent-work">
@@ -239,10 +240,10 @@
     <!-- End Work Section -->
 
     <!-- CurveUp -->
-    <svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
-    </svg>
+    </svg> -->
 
     <!-- Quotes Section -->
     <div class="wrap services-wrap recent-wrap">
@@ -289,16 +290,16 @@
     <!-- End Quotes Section -->
 
     <!-- CurveDown -->
-    <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
-    </svg>
+    </svg> -->
 
     <!-- CurveDown -->
-    <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
-    </svg>
+    </svg> -->
 
 
     <!-- Team Section -->
@@ -388,10 +389,10 @@
     <!-- End Team Section -->
 
     <!-- CurveUp -->
-    <svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveUpColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
-    </svg>
+    </svg> -->
 
     <!-- Clients Logos Section -->
     <div class="wrap ">
@@ -483,14 +484,13 @@
     <!-- End Clients Logos Section -->
     <!-- Contact Section -->
     <div class="wrap contact" id="contact">
-        <div class="grid grid-pad">
+        <div class="grid">
             <h2>Contact</h2>
             <div class="col-1-2">
                 <div class="content address">
                     <h3>Talk to us</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores iusto fugit esse soluta quae
-                        debitis quibusdam harum voluptatem, maxime, aliquam sequi. Tempora ipsum magni unde velit
-                        corporis fuga, necessitatibus blanditiis.</p>
+                    <p>The first step we need to take is for us to understand your needs, <br>so give us a way to reach out
+                        to you, and let's get to work.</p>
                     <address>
                         <div>
                             <div class="box-icon">
@@ -505,7 +505,7 @@
                                 <i class="icon-mail"></i>
                             </div>
                             <span>Email:</span>
-                            <p>email@gmail.com</p>
+                            <p>connect@minkucreation.com</p>
                         </div>
 
                         <div>
@@ -518,15 +518,16 @@
                     </address>
                 </div>
             </div>
-            <div class="col-1-2 pleft-25">
-                <div class="content contact-form">
-                    <form class="form">
+            <div class="col-1-2 pleft-25 col-md-10">
+                <!-- <div class="content contact-form"> -->
+                    <!-- <form class="form" method="post" role="form">
                         <input type="text" class="comment-name" placeholder="Name*" required>
                         <input type="email" class="comment-email" placeholder="Email*" required>
                         <input type="text" class="comment-subject" placeholder="Subject">
                         <textarea class="required comment-text" placeholder="Message..." required></textarea>
                         <input type="submit" value="Send Message" class="btn submit comment-submit">
-                    </form>
+                    </form> -->
+                    <img src="/images/logo.svg" alt="logo" srcset="" class="contact-logo">
                 </div>
             </div>
         </div>
@@ -534,14 +535,14 @@
     <!-- End Contact Section -->
 
     <!-- CurveDown -->
-    <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
+    <!-- <svg class="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
         viewBox="0 0 100 100" preserveAspectRatio="none">
         <path d="M0 0 C 50 100 80 100 100 0 Z"></path>
-    </svg>
+    </svg> -->
 
     <!-- Footer -->
     <footer class="wrap">
-            
+
         <div class="social-footer">
             <div class="grid grid-pad">
                 <div class="col-1-1">
@@ -563,18 +564,20 @@
 
     <div class="loader-overlay">
         <div class="loader">
-    </div>
+        </div>
 
-    <!-- JS -->
-    <script src="js/jquery.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/mixitup.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/jquery.nav.js"></script>
-    <script src="js/owl-carousel/owl.carousel.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
-    <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/lightcase.min.js"></script>
+        <!-- JS -->
+        <script src="js/jquery.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/mixitup.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
+            integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="js/jquery.nav.js"></script>
+        <script src="js/owl-carousel/owl.carousel.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+        <script src="js/jquery.counterup.min.js"></script>
+        <script src="js/lightcase.min.js"></script>
 </body>
 
 </html>
