--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-1-1">
                 <div class="content">
                     <div class="logo-wrap">
-                        <a href="#0" class="logo"></a>
+                        <a href="index.html" class="logo"></a>
                     </div>
                     <nav class="navigation">
                         <input type="checkbox" id="nav-button">
@@ -41,8 +41,6 @@
                             <li><a href="#home" class="current">Home</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#work">Work</a></li>
-                            <!-- <li><a href="#blog">Blog</a></li> -->
-                            <!-- <li><a href="#pricing">Pricing</a></li> -->
                             <li><a href="#team">About</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
@@ -527,7 +525,7 @@
                         <textarea class="required comment-text" placeholder="Message..." required></textarea>
                         <input type="submit" value="Send Message" class="btn submit comment-submit">
                     </form> -->
-                    <img src="/images/logo.svg" alt="logo" srcset="" class="contact-logo">
+                    <img src="/images/logo2.svg" alt="logo" srcset="" class="contact-logo">
                 </div>
             </div>
         </div>
