--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <i class="circle-icon icon-video2"></i>
                     </div>
                     <div class="service-entry">
-                        <h3>Video editing/ Creation </h3>
+                        <h3>Video Creation </h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent feugiat tellus eget libero
                             pretium, sollicitudin feugiat libero.</p>
                         <!-- <a class="btn read-more" href="#0">Read More</a> -->
