--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minku Creation</title>
+    <style>
+        body {
+            background: url("/images/uc.png") no-repeat center center fixed black;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+
+        @media only screen and (max-width: 1200px) {
+            body {
+                background-size: 100%;
+            }
+        }
+    </style>
 </head>
+
 <body>
-    <code>Construction under work....</code>
 </body>
+
 </html>
