--- a/warning.html
+++ b/warning.html
@@ -8,7 +8,7 @@
     <title>Minku Creation</title>
     <style>
         body {
-            background: url("https://minkucreation.com/images/uc.png") no-repeat center center fixed black;
+            background: url("/images/uc.png") no-repeat center center fixed black;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
